--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/cannon": "6.4.0",
     "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "^8.17.6",
+    "@react-three/fiber": "8.8.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.167.1"
+    "three": "0.145.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
