--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-three/cannon": "6.4.0",
-    "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "8.8.10",
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.5",
+    "postprocessing": "^6.36.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "0.145.0"
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
